# CxxWin

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CNAME  DeclareDPIAware.manifest  Doxyfile  LICENSE  README.md  VERSION  annotated.html  build.sh  clean.sh  configure.sh  dir_17183c9a44c5ea42380c345b0bc4b5bd.html  dir_34a2d04789e6072590dc7fd23c3451f8.html  dir_82e912cf391e9913c852d5e7c484a083.html  dir_87018e622e39c8bc40ace5c49ff36fb4.html  dir_88bab166860255f959016b8c5e7512af.html  dir_88c30591ba125011a5eb0023131b82dc.html  dir_9bc32812666c1354c5bb25d7268c0a0c.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxy_stylesheet.css  functions_func.html  functions_type.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  manifest.xml  menu.js  menudata.js  msystem.sh  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  package.json  package.sh  (+3 more)
.github/workflows/: MSYS_CLANG32.yml  MSYS_CLANG64.yml  MSYS_MINGW32.yml  MSYS_MINGW64.yml  MSYS_UCRT64.yml  MSYS_UCRT64_BUILD.yml  cmake_msvc_latest.yml
app/: CMakeLists.txt  clean.sh  rccompiler.sh  rebuild.sh  run.sh
app/CxxWin/: MainComponent.cpp  MainComponent.hpp  WinMain.hpp
app/CxxWin/modules/Win32_core/: win32_core.hpp  win32_core.mm
app/CxxWin/modules/Win32_core/native/: win32_BasicNativeHeaders.hpp  win32_Unicode.hpp
app/CxxWin/modules/Win32_core/system/: win32_CompilerSupport.hpp  win32_PlatformDefs.hpp  win32_StandardHeader.hpp
app/CxxWin/modules/Win32_core/window/: win32_BaseWindow.hpp  win32_MainWindow.cpp
app/CxxWin/modules/Win32_resource/: win32_resource.cpp  win32_resource.hpp
app/CxxWin/modules/Win32_resource/img/: win32_ApplicationIcon_png.hpp  win32_Logo_png.cpp  win32_Logo_png.hpp  win32_SmallLogo44x44_png.hpp  win32_SmallLogo_png.cpp  win32_SplashScreen_png.hpp  win32_png.cpp
app/CxxWin/modules/Win32_resource/key/: win32_Windows_TemporaryKey_pfx.cpp  win32_Windows_TemporaryKey_pfx.hpp  win32_pfx.hpp
app/res/: CxxWin.manifest  default.manifest
d0/d74/: win32___platform_defs_8hpp.html  win32___platform_defs_8hpp_source.html
d0/d76/: namespace_c_make_r_c_1_1_key_1_1_windows___temporary_key.html
d0/d80/: class_c_make_r_c_1_1_detail_1_1_file_data.html
d0/dc1/: class_c_make_r_c_1_1_embedded_file_system-members.html
d1/d50/: win32___splash_screen__png_8cpp.html  win32___splash_screen__png_8cpp_source.html
d1/d9d/: class_smart_pointer-members.html
d1/da2/: class_c_make_r_c_1_1_detail_1_1_file_or_directory.html
d1/dd2/: win32___target_platform_8hpp.html
d2/d09/: win32__pfx_8cpp.html  win32__pfx_8cpp_source.html
d2/d49/: namespaceanonymous__namespace_02win32___logo__png_8cpp_03.html
d2/d9b/: win32___toolchain_8hpp_source.html
d2/da8/: class_c_make_r_c_1_1_detail_1_1_file_or_directory-members.html
d2/dad/: win32___unicode_8hpp_source.html
d3/d1f/: win32__resource_8mm_source.html
d3/d3c/: win32___logo__png_8cpp.html
d3/d70/: namespaceanonymous__namespace_02win32___store_logo__png_8hpp_03.html
d3/de6/: class_c_make_r_c_1_1_detail_1_1_directory-members.html
d4/d39/: struct_c_make_r_c_1_1_detail_1_1_created_sub_directory-members.html
d4/d3a/: namespace_c_make_r_c_1_1_key_1_1anonymous__namespace_02win32__pfx_8cpp_03.html
d4/d5a/: namespaceanonymous__namespace_02win32___windows___temporary_key__pfx_8cpp_03.html
d4/dfe/: win32__png_8cpp.html  win32__png_8cpp_source.html
d5/d1d/: win32__resource_8hpp.html
d5/d45/: win32__png_8hpp.html  win32__png_8hpp_source.html
d5/d66/: win32__resource_8cpp.html  win32__resource_8cpp_source.html
d5/d7d/: namespaceanonymous__namespace_02win32___logo__png_8hpp_03.html
d5/d8a/: struct_c_make_r_c_1_1_detail_1_1_created_sub_directory.html
d5/dbd/: class_c_make_r_c_1_1_directory_entry-members.html
d5/dc1/: namespace_win32_1_1_core_1_1_native.html
d6/d09/: win32___windows___temporary_key__pfx_8cpp.html  win32___windows___temporary_key__pfx_8cpp_source.html
d6/d27/: win32___d_p_i_scale_8hpp.html
d6/d42/: win32___smart_pointer_8hpp.html  win32___smart_pointer_8hpp_source.html
d6/dc6/: win32__pfx_8hpp.html
df/dcb/: cmrc_8hpp.html  (+1 more)
docs/: .gitignore  _main_8cpp.html  _main_8h.html  _main_component_8cpp.html  _main_component_8h.html  _main_component_8h_source.html  _main_component_8hpp.html  _main_component_8hpp.tex  _main_component_8hpp_source.html  _main_component_8hpp_source.tex  _mouse_8h.html  _win_main_8cpp.html  _win_main_8cpp.tex  _win_main_8h.html  _win_main_8h_source.html  _win_main_8hpp.html  _win_main_8hpp.tex  _win_main_8hpp_source.tex  annotated.html  annotated.tex  class_base_window-members.html  class_base_window.html  class_base_window.tex  class_c_make_r_c_1_1_detail_1_1_directory.tex  class_c_make_r_c_1_1_detail_1_1_directory_1_1_iterator.html  class_c_make_r_c_1_1_detail_1_1_directory_1_1_iterator.tex  class_c_make_r_c_1_1_detail_1_1_file_data-members.html  class_c_make_r_c_1_1_detail_1_1_file_data.tex  class_c_make_r_c_1_1_detail_1_1_file_or_directory.html  class_c_make_r_c_1_1_directory_entry-members.html  class_c_make_r_c_1_1_directory_entry.html  class_c_make_r_c_1_1_embedded_file_system.tex  class_c_make_r_c_1_1_file.html  class_d_p_i_scale-members.html  class_d_p_i_scale.html  class_d_p_i_scale.tex  class_main_component-members.html  class_main_component.html  class_main_component.tex  class_main_window-members.html  (+230 more)
res/: default-manifest.rc  res.rc  resource.h  resource.rc
search/: all_1.js  all_10.js  all_12.js  all_6.js  all_9.js  all_a.js  all_e.js  classes_0.js  classes_3.js  classes_4.js  classes_8.js  defines_0.js  defines_1.js  defines_3.js  defines_5.js  files_1.js  functions_0.js  functions_4.js  functions_6.js  functions_a.js  functions_d.js  namespaces_3.js  search.js  searchdata.js  typedefs_1.js  typedefs_5.js  typedefs_6.js  typedefs_7.js  typedefs_8.js  typedefs_9.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_b.js
share/: CxxWin.rc  CxxWinConfig.cmake.in
src/: Main.cpp  Main.h  MainComponent.cpp  MainComponent.h  Mouse.cpp  Mouse.h
(+1391 files in other folders)
